feat: update website content and styles

--- a/pages/case_assessment_free_legal_evaluation.html
+++ b/pages/case_assessment_free_legal_evaluation.html
@@ -698,5 +698,6 @@
         // Initialize
         showStep(1);
     </script>
+<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
 </html>
