--- a/pages/legal_services_hub_gaming_dispute_solutions.html
+++ b/pages/legal_services_hub_gaming_dispute_solutions.html
@@ -774,5 +774,6 @@
             document.getElementById('feeAmount').textContent = '$' + fee.toLocaleString();
         });
     </script>
+<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
 </html>
