--- a/index.html
+++ b/index.html
@@ -130,5 +130,6 @@
             clearInterval(textInterval);
         }, 3000);
     </script>
+<script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
 </body>
 </html>
