--- a/pages/client_portal_secure_case_management.html
+++ b/pages/client_portal_secure_case_management.html
@@ -430,5 +430,6 @@
             </div>
         </div>
     </footer>
+<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
 </html>
