--- a/pages/knowledge_center_player_rights_education.html
+++ b/pages/knowledge_center_player_rights_education.html
@@ -614,5 +614,6 @@
             </div>
         </div>
     </footer>
+<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
 </html>
